--- a/VirtualSatelliteCAD/Resources/Ui/preferences_header.ui
+++ b/VirtualSatelliteCAD/Resources/Ui/preferences_header.ui
@@ -6,65 +6,89 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>697</width>
+    <width>894</width>
     <height>621</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>VirtualSatellitePreferences</string>
+   <string>General Preferences</string>
   </property>
-  <widget class="QGroupBox" name="groupBox">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>10</y>
-     <width>615</width>
-     <height>131</height>
-    </rect>
+  <layout class="QVBoxLayout">
+   <property name="spacing">
+    <number>6</number>
    </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
+   <property name="leftMargin">
+    <number>9</number>
    </property>
-   <property name="title">
-    <string>General settings</string>
+   <property name="topMargin">
+    <number>9</number>
    </property>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>600</width>
-      <height>106</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-      <widget class="QLabel" name="labelFileDirectory">
-       <property name="text">
-        <string>Local file directory (to store FCstd files)</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="Gui::PrefFileChooser" name="fileDirectoryChooser">
-       <property name="prefEntry" stdset="0">
-        <cstring>FileDirectory</cstring>
-       </property>
-       <property name="prefPath" stdset="0">
-        <cstring>Mod/VirtualSatelliteCAD</cstring>
-       </property>
-       <property name="mode">
-        <enum>Gui::FileChooser::Directory</enum>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Select active Plugin</string>
-       </property>
-      </widget>
-     </item>
+   <property name="rightMargin">
+    <number>9</number>
+   </property>
+   <property name="bottomMargin">
+    <number>9</number>
+   </property>
+   <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Storage of files (.FCstd)</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="Gui::PrefRadioButton" name="askForDirectoryRadioButton">
+          <property name="text">
+           <string>Always ask for a project folder</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>AskForFileDirectory</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/VirtualSatelliteCAD</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="Gui::PrefRadioButton" name="alwaysUsePrefFolderRadioButton">
+          <property name="text">
+           <string>Always store files in this project folder:</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>UseStaticFileDirectory</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/VirtualSatelliteCAD</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="Gui::PrefFileChooser" name="fileDirectoryChooser">
+          <property name="prefEntry" stdset="0">
+           <cstring>FileDirectory</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/VirtualSatelliteCAD</cstring>
+          </property>
+          <property name="mode">
+           <enum>Gui::FileChooser::Directory</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Select active Plugin</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0">
+        <property name="spacing">
+         <number>6</number>
+        </property>
