Add REST plugin preference UI - (Task #45)
Add new UI preference page, where repository name, user name, password,
API version and root sei of the import can be selected. Add an dialog
that can be called on import to select a root sei from the current
repository.

---
Task #45: Implement REST Server Plugin

--- a/VirtualSatelliteCAD/plugins/VirtualSatelliteRestPlugin/preferences.ui
+++ b/VirtualSatelliteCAD/plugins/VirtualSatelliteRestPlugin/preferences.ui
@@ -30,27 +30,135 @@
     <number>9</number>
    </property>
    <item>
-    <widget class="QGroupBox" name="groupBox_VirSat">
+    <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>VirSat preference group</string>
+      <string>General</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_VirSat">
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="label">
         <property name="text">
-         <string>Some plugins specific preference</string>
+         <string>Repository name</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="Gui::PrefLineEdit" name="lineEdit_VirSat">
+       <widget class="Gui::PrefLineEdit" name="lineEdit_2">
         <property name="prefEntry" stdset="0">
-         <cstring>VirSatPref</cstring>
+         <cstring>RepositoryName</cstring>
         </property>
         <property name="prefPath" stdset="0">
-         <cstring>Mod/VirtualSatelliteCAD</cstring>
+         <cstring>Mod/VirtualSatelliteREST</cstring>
         </property>
        </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Username</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefLineEdit" name="lineEdit_3">
+        <property name="prefEntry" stdset="0">
+         <cstring>Username</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/VirtualSatelliteREST</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Password</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefLineEdit" name="lineEdit_4">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+        <property name="prefEntry" stdset="0">
+         <cstring>Password</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/VirtualSatelliteREST</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Api Version</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Gui::PrefComboBox" name="comboBox">
+        <property name="prefEntry" stdset="0">
+         <cstring>ApiVersion</cstring>
+        </property>
+        <property name="prefPath" stdset="0">
+         <cstring>Mod/VirtualSatelliteREST</cstring>
+        </property>
+        <item>
+         <property name="text">
+          <string>0.0.1</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Starting SEI at import</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_VirSat">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="Gui::PrefRadioButton" name="askForDirectoryRadioButton">
+          <property name="text">
+           <string>Always ask for a starting SEI</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>AskForStartingSEI</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/VirtualSatelliteREST</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="Gui::PrefRadioButton" name="alwaysUsePrefFolderRadioButton">
+          <property name="text">
+           <string>Always use this starting SEI:</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>UseStaticStartingSEI</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/VirtualSatelliteREST</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="Gui::PrefLineEdit" name="lineEdit">
+          <property name="prefEntry" stdset="0">
+           <cstring>StartingSEI</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/VirtualSatelliteREST</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
@@ -71,6 +179,16 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>Gui::PrefRadioButton</class>
+   <extends>QRadioButton</extends>
+   <header>Gui/PrefWidgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Gui::PrefComboBox</class>
+   <extends>QComboBox</extends>
+   <header>Gui/PrefWidgets.h</header>
+  </customwidget>
   <customwidget>
    <class>Gui::PrefLineEdit</class>
    <extends>QLineEdit</extends>
